--- a/chrome/locale/en-US/button.dtd
+++ b/chrome/locale/en-US/button.dtd
@@ -1,3 +1,3 @@
-<!ENTITY context_title_open_link "Open Link in Source Editor">
-<!ENTITY context_title_open_page "Open Page in Source Editor">
+<!ENTITY context_title_open_link "Edit Linked Page">
+<!ENTITY context_title_open_page "Edit Page">
 <!ENTITY edit_page "Edit Page">
